Fixed layout issue of the Search in all folders control

--- a/styles/common/search-block.less
+++ b/styles/common/search-block.less
@@ -23,7 +23,7 @@
 		height: 100%;
 		min-height: 26px;
 		outline: none;
-		overflow: hidden;
+		//overflow: hidden;
 		padding-left: 30px;
 		padding-top: 3px;
 		position: relative;
@@ -146,14 +146,14 @@
 
 	.expand .extended {
 		opacity: 1;
-		max-height: 200px;
+		max-height: 220px;
 		visibility: visible;
-		.transition(~"max-height 0.5s ease 0s, opacity 0.5s ease 0s, visibility 0s linear 0s");
+		.transition(~"max-height 0.5s ease 0s, opacity 0.5s ease 0.2s, visibility 0s linear 0s");
 	}
 
 	.extended {
 		.box-sizing;
-		.transition(~"max-height 0.5s ease 0s, opacity 0.5s ease 0s, visibility 10ms  linear 2s");
+		.transition(~"max-height 0.5s ease 0s, opacity 0.2s ease 0s, visibility 10ms linear 1s");
 		
 		max-height: 0px;
 
@@ -161,7 +161,7 @@
 		//height: 100%;
 		margin-top: -24px;
 		opacity: 0;
-		overflow: hidden;
+		// overflow: hidden;
 		visibility: hidden;
 		width: 100%;
 
@@ -245,6 +245,10 @@
 				margin: 0px 18px 0px 0px;
 				padding: 10px 0px;
 				width: auto;
+
+				display: flex;
+				justify-content: flex-end;
+				flex-wrap: wrap;
 
 				html.rtl & {
 					margin: 0px 0px 0px 18px;
